kube/amazing-games/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazing-games-service
spec:
  selector:
    app: amazing-backend
  ports:
    - port: 8082
      targetPort: 8082
