kube/amazing-games/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: amazing-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`amazing-games.k8s.icydusk.io`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: amazing-games-service
      port: 8082
